# docker-library-redis

.github/actions/apply-docker-version/: action.yml  apply-docker-version.sh
.github/actions/build-and-tag-locally/: action.yml
.github/actions/common/: func.sh
.github/workflows/: build_release_automation.yml  pre-merge.yml  release_build_and_test.yml  release_publish.yml
alpine/: Dockerfile
debian/: Dockerfile
release-automation/: README.md  pyproject.toml
release-automation/docker/: Dockerfile
release-automation/src/stackbrew_generator/: __init__.py  cli.py  distribution.py  exceptions.py  git_operations.py  logging_config.py  models.py  stackbrew.py  version_filter.py
release-automation/tests/: __init__.py  test_integration.py  test_models.py  test_stackbrew.py  test_stackbrew_updater.py  test_update_stackbrew_file.py  test_version_filter.py
test/: run-entrypoint-tests.sh  run-shell-func-tests.sh
