[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackbrew-library-generator"
version = "0.1.0"
description = "Stackbrew Library Generator for Redis Docker Images"
authors = [
    {name = "Redis Team", email = "team@redis.io"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
release-automation = "stackbrew_generator.cli:app"

[project.urls]
Homepage = "https://github.com/redis/docker-library-redis"
Repository = "https://github.com/redis/docker-library-redis"
Issues = "https://github.com/redis/docker-library-redis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stackbrew_generator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=stackbrew_generator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
